[gd_scene load_steps=14 format=3 uid="uid://y8vtislkcgb2"]

[ext_resource type="FontFile" uid="uid://cksbyujvq876h" path="res://assets/pixel_font.ttf" id="2_8bfv2"]
[ext_resource type="Script" path="res://main.gd" id="2_cwu3v"]
[ext_resource type="Script" path="res://player.gd" id="3_il1xn"]
[ext_resource type="Script" path="res://ball.gd" id="4_5uxr0"]
[ext_resource type="Script" path="res://player_2.gd" id="4_060jf"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCReceiver.gd" id="4_338wd"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer.gd" id="5_26yc0"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCClient.gd" id="6_yi6qk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h58vm"]
size = Vector2(120, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w32bf"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sp7ob"]
size = Vector2(64, 1080)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h8hgk"]
size = Vector2(1920, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ajbwl"]
size = Vector2(1920, 56)

[node name="Main" type="Sprite2D"]
texture_filter = 1
centered = false
script = ExtResource("2_cwu3v")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0.215686, 1)

[node name="Player" type="StaticBody2D" parent="."]
position = Vector2(480, 950)
script = ExtResource("3_il1xn")

[node name="ColorRect" type="ColorRect" parent="Player"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 120.0
offset_bottom = 25.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(60, 13)
shape = SubResource("RectangleShape2D_h58vm")

[node name="OSCReceiver_x" type="Node" parent="Player"]
script = ExtResource("4_338wd")

[node name="OSCReceiver_y" type="Node" parent="Player"]
script = ExtResource("4_338wd")

[node name="OSCServer" type="Node" parent="Player"]
script = ExtResource("5_26yc0")

[node name="OSCClient" type="Node" parent="Player"]
script = ExtResource("6_yi6qk")

[node name="Player2" type="StaticBody2D" parent="."]
position = Vector2(1440, 950)
script = ExtResource("4_060jf")

[node name="ColorRect" type="ColorRect" parent="Player2"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_right = 121.0
offset_bottom = 25.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
position = Vector2(60, 13)
shape = SubResource("RectangleShape2D_h58vm")

[node name="Ball" type="CharacterBody2D" parent="."]
position = Vector2(960, 540)
collision_mask = 3
script = ExtResource("4_5uxr0")

[node name="ColorRect" type="ColorRect" parent="Ball"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource("RectangleShape2D_w32bf")

[node name="Borders" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="Right" type="CollisionShape2D" parent="Borders"]
position = Vector2(1952, 540)
shape = SubResource("RectangleShape2D_sp7ob")

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2(960, -32)
shape = SubResource("RectangleShape2D_h8hgk")

[node name="Left" type="CollisionShape2D" parent="Borders"]
position = Vector2(-32, 540)
shape = SubResource("RectangleShape2D_sp7ob")

[node name="Scorebottom" type="Area2D" parent="."]

[node name="CollissionShape2D" type="CollisionShape2D" parent="Scorebottom"]
position = Vector2(960, 1108)
shape = SubResource("RectangleShape2D_ajbwl")

[node name="Hud" type="CanvasLayer" parent="."]

[node name="PlayerScore" type="Label" parent="Hud"]
offset_left = 965.0
offset_top = 16.0
offset_right = 1065.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("2_8bfv2")
theme_override_font_sizes/font_size = 100
text = "0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BallTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_right = 120.0
offset_bottom = 25.0
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(60, 13)
shape = SubResource("RectangleShape2D_h58vm")

[connection signal="body_entered" from="Scorebottom" to="." method="_on_score_left_body_entered"]
[connection signal="timeout" from="BallTimer" to="." method="_on_ball_timer_timeout"]
